chore: add tool less converting .less to .css

--- a/modd.conf
+++ b/modd.conf
@@ -1,3 +1,7 @@
 *.py{
     daemon +sigterm: PYTHONPATH=src python app.py
 }
+
+*.less{
+	daemon +sigterm: lessc src/pricetracker/static/style.less src/pricetracker/static/style.css
+}
