feat: add button stop following #wip

--- a/modd.conf
+++ b/modd.conf
@@ -3,5 +3,5 @@
 }
 
 *.less{
-	daemon +sigterm: lessc src/pricetracker/static/style.less src/pricetracker/static/style.css
+	daemon +sigterm: lessc src/pricetracker/static/style.less src/pricetracker/static/style.css && PYTHONPATH=src python app.py
 }
